# gameserver

./: .gitpod.Dockerfile  .gitpod.yml  LICENSE  Makefile  README.md  check.sql  create_room.sql  create_room_member.sql  init.sql  pyproject.toml  requirements.txt  reset.sh  reset_room.sql  room_schema.sql  roomtable.sql  schema.sql  schema_room.sql  setup.cfg  todo.txt
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  docker-compose.yml  postCreate.sh
app/: api.py  auth.py  config.py  db.py  db_controllers.py  dependencies.py  exceptions.py  model.py  models.py  room_controler.py  room_function.py  room_model.py  service.py  view.py
app/api/: __init__.py  room.py  user.py
app/model/: __init__.py  base.py  room.py  room_models.py  user.py  user_models.py  valid_scores.py
app/models/: __init__.py  model.py  room.py  room_impl.py  user.py  user_impl.py  util.py
app/router/: room.py  router.py  user.py
app/routers/: __init__.py  room.py  room_api.py  room_router.py  user.py  user_router.py
app/schemas/: __init__.py  enums.py  live.py  room.py  structures.py  user.py
app/services/: room_service.py  user_service.py
conf/: .dircolors  .my.cnf
docs/: api.md  hint.md  index.html  multiplay.md  openapi.json
tests/: test_join.py  test_live.py  test_room.py  test_room0.py  test_user.py  test_user2.py
